--- a/hola.html
+++ b/hola.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Home</h1>
     <script>
-        fetch("http://localhost/calendario/availability/parameters?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiJ9.eyJjdXN0b21lcklkIjoiMTMiLCJjYWxlbmRhcklkIjoiNSJ9.qAXJcDIjzo2LfH4Oortfvcs9XaEX6UbAyhYJQ1f23idoejTy3NbpO8ToYTMvhr1VfESreymwSZ1hTP8A_iWJcqEWedJLXxlrHvbZZTjicuCp3eSvCG2dBXrpZaUSrCJycKQKt8T4UZWXFscV3xW8x6Juiy3NSS7sC9ncqxeRB1Q",
+        fetch('http://localhost/calendario/availability/parameters?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiJ9.eyJjdXN0b21lcklkIjoiMTMiLCJjYWxlbmRhcklkIjoiNSJ9.qAXJcDIjzo2LfH4Oortfvcs9XaEX6UbAyhYJQ1f23idoejTy3NbpO8ToYTMvhr1VfESreymwSZ1hTP8A_iWJcqEWedJLXxlrHvbZZTjicuCp3eSvCG2dBXrpZaUSrCJycKQKt8T4UZWXFscV3xW8x6Juiy3NSS7sC9ncqxeRB1Q',
             {
                 headers: {
                     'Accept': 'application/json',
